<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_project"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:shortcutShortLabel="@string/shortcut_new_project_short"
        android:shortcutLongLabel="@string/shortcut_new_project_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.clipp.ai.video.editor.maker"
            android:targetClass="com.example.MainActivity"
            android:data="clipp://shortcut/new_project" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="quick_trim"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:shortcutShortLabel="@string/shortcut_quick_trim_short"
        android:shortcutLongLabel="@string/shortcut_quick_trim_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.clipp.ai.video.editor.maker"
            android:targetClass="com.example.MainActivity"
            android:data="clipp://shortcut/quick_trim" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="continue_last"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:shortcutShortLabel="@string/shortcut_continue_short"
        android:shortcutLongLabel="@string/shortcut_continue_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.clipp.ai.video.editor.maker"
            android:targetClass="com.example.MainActivity"
            android:data="clipp://shortcut/continue_last" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
